[gd_scene load_steps=9 format=3 uid="uid://4rh101qp4rsh"]

[ext_resource type="Script" path="res://scenes/mechanics/button/button.gd" id="1_c6ndc"]
[ext_resource type="Texture2D" uid="uid://dvxhkfpbbo1o" path="res://assets/images/mechanics/BlueButton.png" id="2_j613w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jvbj4"]
size = Vector2(24, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c7nlq"]
size = Vector2(32, 9)

[sub_resource type="Animation" id="Animation_gcc3j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_aerj7"]
resource_name = "off"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_s4ibp"]
resource_name = "on"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mj2nl"]
_data = {
"RESET": SubResource("Animation_gcc3j"),
"off": SubResource("Animation_aerj7"),
"on": SubResource("Animation_s4ibp")
}

[node name="LevelButton" type="StaticBody2D"]
script = ExtResource("1_c6ndc")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1.19209e-07, -18.3613)
scale = Vector2(1, 1.14759)
texture = ExtResource("2_j613w")
hframes = 2

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color(0, 1, 0.254902, 1)
position = Vector2(0, -12.5)
shape = SubResource("RectangleShape2D_jvbj4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4.5)
shape = SubResource("RectangleShape2D_c7nlq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mj2nl")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
